--- a/style.css
+++ b/style.css
@@ -75,9 +75,20 @@ form{
     align-items: center;
 }
 .box{
-    width: 160px;
+    width: 100px;
     height: 100px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.box div {
     background-color: #fff;
+    background-image: url(assets/RGBLogo.png);
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height:100%;
 }
 .b{
     padding-top: 20px;
