--- a/style.css
+++ b/style.css
@@ -77,18 +77,17 @@ form{
 .box{
     width: 100px;
     height: 100px;
-    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 .box div {
-    background-color: #fff;
     background-image: url(assets/RGBLogo.png);
     background-position: center;
     background-size: cover;
     width: 100%;
-    height:100%;
+    height: 100%;
 }
 .b{
     padding-top: 20px;
@@ -121,22 +120,36 @@ form{
     align-items: center;
 }
 .countV{
+    position: relative;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     align-items: center;
     background-color: white;
-    width: 70px;
-    height: 90px;
+    width: 80px;
+    height: 110px;
     color: #000;
 }
 .count{
+    position: relative;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     align-items: center;
     background-color: white;
     width: 110px;
-    height: 70px;
+    height: 80px;
     color: #000;
+}
+.newdiv{
+    position: absolute;
+    font-size: 20px;
+    text-shadow: 2px 0 #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff,
+             1px 1px #fff, -1px -1px #fff, 1px -1px #fff, -1px 1px #fff;
+}
+.paper{
+    background-color: #9f9f9f;
+    border: 1px dashed #7a7a7a ;
 }
 @media (max-width: 800px) {
     .calculatorForm{
