--- a/style.css
+++ b/style.css
@@ -14,20 +14,24 @@ input::-webkit-inner-spin-button {
 }
 body{
     background-color: #000;
+    background-image: url(./assets/arbol.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 .text{
-    margin-top: 15px;
+    margin-top: 4rem;
     padding: 0px;
 }
 
 .main{
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     flex-direction: column;
     width: 100%;
     color: white;
-
+    height: 100vh;
 }
 .calculatorForm{
     display: flex;
@@ -36,7 +40,7 @@ body{
     gap: 40px;
 }
 .calculator{
-    background-color: #242424;
+    background-color: #24242490;
     border-radius: 20px;
     margin: 10px;
     padding: 20px 30px;
@@ -156,6 +160,9 @@ form{
       display: flex;
       flex-direction: column;
       gap: 10px;
+    }
+    .text{
+        margin-top: 1rem;
     }
 
   }
